# kmp-hs

./: README.md  kmp-hs.cabal
.github/workflows/: haskell.yml
app/: Main.hs
src/: Kmp.hs
test/: KmpTest.hs
