cabal-version:      2.4
name:               kmp-hs
version:            1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:           https://github.com/furadnik/kmp-hs

-- A URL where users can report bugs.
-- bug-reports:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Filip Úradník
maintainer:         filip.uradnik9@gmail.com

-- A copyright notice.
-- copyright:
category:           Text
extra-source-files:
    README.md
    CHANGELOG.md

library
    exposed-modules:  Kmp

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable kmp-hs
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.15.1.0,
        kmp-hs

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite kmp-hs-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          KmpTest.hs
    build-depends:    base ^>=4.15.1.0
